[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.6.0",
    "pandas>=3.0.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
]
